RESOLVED FIXED51084
In KeyFrameAnimation.cpp, the progress variable is uninitialized, leading to compilation failure
https://bugs.webkit.org/show_bug.cgi?id=51084
Summary In KeyFrameAnimation.cpp, the progress variable is uninitialized, leading to ...
asharif.tools
Reported 2010-12-14 18:30:31 PST
In KeyFrameAnimation.cpp, the progress variable is uninitialized, leading to compilation failure on Linux when compiled with -Werror using gcc. This happens because the function fetchIntervalEndpointsForProperty may have a path that will leave progress uninitialized if it is inlined. The progress variable can simply be set to 0 when created as shown here: http://codereview.chromium.org/5832001/diff/1/third_party/WebKit/WebCore/page/animation/KeyframeAnimation.cpp
Attachments
Patch to fix this problem. It includes a ChangeLog entry. (1.28 KB, patch)
2010-12-28 14:23 PST, asharif.tools
no flags
This is an update to the earlier patch and fixes progress in both locations. (1.82 KB, patch)
2011-01-14 11:35 PST, asharif.tools
no flags
Darin Fisher (:fishd, Google)
Comment 1 2010-12-14 20:53:46 PST
Would you be so kind as to post your patch to this bug report following the instructions provided at http://webkit.org/coding/contributing.html? Thanks!
asharif.tools
Comment 2 2010-12-28 14:23:02 PST
Created attachment 77579 [details] Patch to fix this problem. It includes a ChangeLog entry. Sorry about the delay. I didn't realize you had replied. This patch initializes the progress variable to 0.0.
asharif.tools
Comment 3 2011-01-11 13:28:05 PST
(In reply to comment #2) > Created an attachment (id=77579) [details] > Patch to fix this problem. It includes a ChangeLog entry. > > Sorry about the delay. I didn't realize you had replied. This patch initializes the progress variable to 0.0. Ping. Is this bug fixed? Can you update the status after applying my patch? Thanks,
asharif.tools
Comment 4 2011-01-13 14:17:36 PST
(In reply to comment #3) > (In reply to comment #2) > > Created an attachment (id=77579) [details] [details] > > Patch to fix this problem. It includes a ChangeLog entry. > > > > Sorry about the delay. I didn't realize you had replied. This patch initializes the progress variable to 0.0. > > Ping. Is this bug fixed? Can you update the status after applying my patch? > > Thanks, Please review and apply this patch. I would like for this patch to be integrated into Chromium soon. Thanks,
asharif.tools
Comment 5 2011-01-14 11:35:18 PST
Created attachment 78969 [details] This is an update to the earlier patch and fixes progress in both locations.
WebKit Commit Bot
Comment 6 2011-01-14 17:20:08 PST
Comment on attachment 78969 [details] This is an update to the earlier patch and fixes progress in both locations. Clearing flags on attachment: 78969 Committed r75850: <http://trac.webkit.org/changeset/75850>
WebKit Commit Bot
Comment 7 2011-01-14 17:20:14 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.