2011-01-14  Ahmad Sharif  <asharif.tools@gmail.com>

Reviewed by Darin Fisher.

        When inlining is performed, the progress variable is
        declared as uninitialized.
        https://bugs.webkit.org/show_bug.cgi?id=51084

        * WebCore: Copied from WebCore.
        * WebCore/page/animation/KeyframeAnimation.cpp:
        (WebCore::KeyframeAnimation::animate):
        (WebCore::KeyframeAnimation::getAnimatedStyle):

Canonical link: https://commits.webkit.org/66108@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@75850 268f45cc-cd09-0410-ab3c-d52691b4dbfc